--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
+<html lang="zh-CN">
+<head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+    <title>图书馆管理系统</title>
+</head>
+<body>
+<!-- 必须有这个节点，否则Vue无法挂载 -->
+<div id="app"></div>
+<script type="module" src="/src/main.js"></script>
+</body>
 </html>
